--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
+      - run: npm audit --production --audit-level=high
       - run: npm run lint
       - run: npm run build --if-present
       - run: npm test
