ci: fix code owners team names

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,8 +1,8 @@
 # These owners will be the default owners for everything in the repo. 
 
-*   @bauta-team 
+*   @axa-group/bauta-team
 
 
 # Maintainers must validate repository configuration files
 
-/.github/   @bauta-maintainers
+/.github/   @axa-group/bauta-maintainers
