chore: adjust bauta-admins ownership

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,4 +5,5 @@
 
 # Admins must validate repository configuration files
 
-/.github/   @axa-group/bauta-admins
+/.github/workflows/   @axa-group/bauta-admins
+/.github/CODEOWNERS   @axa-group/bauta-admins
