feat(core, example, datasource-rest): bump pino to version 8.x

--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -35,5 +35,8 @@
     "pino": "^6.13.2",
     "route-order": "^0.1.0",
     "swagger-ui-express": "^4.4.0"
-  }
+  },
+	"devDependencies": {
+    "@types/pino": "^6.3.11"
+	}
 }
