fix(bautajs-express): bump pino to v8.4.2 fix: override @types/pino to v7.0.5 fix(bautajs-example): fix issue in chache

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "reportFile": "test-reporter.xml"
   },
 	"overrides": {
-		"minimist": "1.2.6"
+		"minimist": "1.2.6",
+    "@types/pino": "^7.0.5"
 	}
 }
