--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-datasource-rest",
-  "version": "1.0.0",
+  "version": "2.0.0-alpha.0",
   "description": "A bautaJS datasource rest provider",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "https://github.com/axa-group/bauta.js"
   },
-	"publishConfig": {
+  "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
@@ -26,9 +26,9 @@
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@axa/bautajs-core": "1.0.0",
+    "@axa/bautajs-core": "^2.0.0-alpha.0",
+    "@axa/native-proxy-agent": "^1.0.0",
     "@sindresorhus/is": "^4.6.0",
-    "got": "^11.8.5",
-    "@axa/native-proxy-agent": "^1.0.0"
+    "got": "^11.8.5"
   }
 }
