--- a/packages/bautajs-example/package.json
+++ b/packages/bautajs-example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-example",
-  "version": "1.0.0",
+  "version": "2.0.0-alpha.0",
   "description": "A bautaJS example",
   "main": "./server.js",
   "scripts": {
@@ -18,11 +18,11 @@
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@axa/bautajs-core": "1.0.0",
-    "@axa/bautajs-datasource-rest": "1.0.0",
-    "@axa/bautajs-decorator-cache": "1.0.0",
-    "@axa/bautajs-express": "1.0.0",
-		"@hapi/boom": "^10.0.0",
+    "@axa/bautajs-core": "^2.0.0-alpha.0",
+    "@axa/bautajs-datasource-rest": "^2.0.0-alpha.0",
+    "@axa/bautajs-decorator-cache": "^2.0.0-alpha.0",
+    "@axa/bautajs-express": "^2.0.0-alpha.0",
+    "@hapi/boom": "^10.0.0",
     "express": "^4.18.1",
     "pino": "^8.4.2",
     "pino-pretty": "^9.1.0"
