--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-express",
-  "version": "1.0.0",
+  "version": "2.0.0-alpha.0",
   "description": "A bautaJS Express.js plugin. Allow auto exposing the bautaJS operations.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "https://github.com/axa-group/bauta.js"
   },
-	"publishConfig": {
+  "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
@@ -25,7 +25,7 @@
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@axa/bautajs-core": "1.0.0",
+    "@axa/bautajs-core": "^2.0.0-alpha.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
