--- a/packages/bautajs-core/package.json
+++ b/packages/bautajs-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-core",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0",
   "description": "Bauta.js is an add-on for your Node.js applications such as Express.js or Fastify.",
   "main": "dist",
   "types": "dist",
