--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-datasource-rest",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0",
   "description": "A bautaJS datasource rest provider",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -26,7 +26,7 @@
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@axa/bautajs-core": "^2.0.0-alpha.1",
+    "@axa/bautajs-core": "^2.0.0",
     "@axa/native-proxy-agent": "^1.0.0",
     "@sindresorhus/is": "^4.6.0",
     "got": "^11.8.5"
