--- a/packages/bautajs-express-example/package.json
+++ b/packages/bautajs-express-example/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@axa/bautajs-example",
-  "version": "2.0.0-alpha.1",
-  "description": "A bautaJS example",
+  "name": "@axa/bautajs-express-example",
+  "version": "2.0.0",
+  "description": "A bautaJS example in express",
   "main": "./server.js",
   "scripts": {
     "start": "LOG_LEVEL=info DEBUG=bautajs* node ./server.js"
@@ -18,10 +18,10 @@
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@axa/bautajs-core": "^2.0.0-alpha.1",
-    "@axa/bautajs-datasource-rest": "^2.0.0-alpha.1",
-    "@axa/bautajs-decorator-cache": "^2.0.0-alpha.1",
-    "@axa/bautajs-express": "^2.0.0-alpha.1",
+    "@axa/bautajs-core": "^2.0.0",
+    "@axa/bautajs-datasource-rest": "^2.0.0",
+    "@axa/bautajs-decorator-cache": "^2.0.0",
+    "@axa/bautajs-express": "^2.0.0",
     "@hapi/boom": "^10.0.0",
     "express": "^4.18.1",
     "pino": "^8.4.2",
