fix: automerge dependabot
fix: ignore typescript changes for dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,6 @@ updates:
       # manage manually any breaking change
       - dependency-name: "*"
         update-types: ["version-update:semver-major"]
+      # manage manually any typescript change  
+      - dependency-name: "typescript"
+
