--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -25,6 +25,10 @@
     "middleware"
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
+  "engines": {
+    "node": ">=14",
+    "npm": ">=8"
+  },
   "dependencies": {
     "@axa/bautajs-core": "^2.0.1",
     "@axa/native-proxy-agent": "^1.0.0",
