chore: require maintainers approval over workflows

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,5 +5,5 @@
 
 # Admins must validate repository configuration files
 
-/.github/workflows/   @axa-group/bauta-admins
+/.github/workflows/   @axa-group/bauta-maintainers
 /.github/CODEOWNERS   @axa-group/bauta-admins
