--- a/packages/bautajs-decorator-cache/package.json
+++ b/packages/bautajs-decorator-cache/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-decorator-cache",
-  "version": "2.0.1",
+  "version": "2.1.0-beta.0",
   "description": "A bautaJS cache decorator",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -29,7 +29,7 @@
     "npm": ">=8"
   },
   "dependencies": {
-    "@axa/bautajs-core": "^2.0.1",
+    "@axa/bautajs-core": "^2.1.0-beta.0",
     "node-object-hash": "^2.3.10",
     "quick-lru-cjs": "^5.2.1"
   }
