--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-express",
-  "version": "2.0.1",
+  "version": "2.1.0-beta.0",
   "description": "A bautaJS Express.js plugin. Allow auto exposing the bautaJS operations.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -29,7 +29,7 @@
     "npm": ">=8"
   },
   "dependencies": {
-    "@axa/bautajs-core": "^2.0.1",
+    "@axa/bautajs-core": "^2.1.0-beta.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
