--- a/package.json
+++ b/package.json
@@ -55,14 +55,16 @@
     "lerna": "^5.1.5",
     "nock": "^13.2.7",
     "node-mocks-http": "^1.11.0",
+    "node-object-hash": "^2.3.10",
     "pino": "^8.4.2",
     "prettier": "^2.7.1",
     "prettier-check": "^2.0.0",
+    "quick-lru-cjs": "^5.2.1",
     "split2": "^4.1.0",
     "stream-mock": "^2.0.5",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
-    "typescript": "4.8.x"
+    "typescript": "4.8.x"    
   },
   "scripts": {
     "lerna": "lerna",
