--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,14 @@
 {
   "lerna": "3.13.0",
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "command": {
     "bootstrap": {
-      "npmClientArgs": ["--no-package-lock"]
+      "npmClientArgs": [
+        "--no-package-lock"
+      ]
     }
   },
-  "version": "2.1.0-beta.0"
+  "version": "2.1.0"
 }
