--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -33,8 +33,7 @@
     "@axa/bautajs-core": "^3.0.0-alpha.0",
     "@fastify/swagger": "^7.6.1",
     "fastify": "^4.8.1",
-    "fastify-plugin": "^4.2.1",
-    "route-order": "^0.1.0"
+    "fastify-plugin": "^4.2.1"
   },
   "devDependencies": {
     "@axa/bautajs-datasource-rest": "^3.0.0-alpha.0"
