fix: remove unneded references to types in tsconfig files

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,9 +17,6 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "ES2019",
-    "paths": {
-      "*" : ["types/*"]
-    }
+    "target": "ES2019"
   }
 }
