--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "composite":true,
-    "typeRoots": ["node_modules/@types", "./types"]
+    "typeRoots": ["node_modules/@types"]
   },
   "files": [],
   "include": ["src/**/*.ts", "src/**/*.json"],
