--- a/.eslintrc
+++ b/.eslintrc
@@ -56,7 +56,8 @@
       "error",
       {
         "singleQuote": true,
-        "printWidth": 100
+        "printWidth": 100,
+        "endOfLine": "auto"
       }
     ],
     "no-promise-executor-return": 0,
