--- a/packages/bautajs-core/package.json
+++ b/packages/bautajs-core/package.json
@@ -8,7 +8,8 @@
     "dist"
   ],
   "scripts": {
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "test": "jest --verbose --detectOpenHandles"
   },
   "bugs": {
     "url": "https://github.com/axa-group/bauta.js/issues"
