--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "tsc": "tsc",
+    "test": "jest --verbose --detectOpenHandles",
     "example": "npx ts-node ./example/simple.ts"
   },
   "repository": {
