--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -8,7 +8,8 @@
     "dist/**/*"
   ],
   "scripts": {
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "test": "jest --verbose --detectOpenHandles"
   },
   "repository": {
     "type": "git",
