--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "tsc": "tsc",
+    "build": "tsc --build",
     "test": "jest --verbose --detectOpenHandles"
   },
   "repository": {
@@ -31,6 +32,7 @@
   },
   "dependencies": {
     "@axa/bautajs-core": "^3.0.0-alpha.0",
+    "@axa/bautajs-tsconfig": "*",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
