--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "tsc": "tsc",
     "build": "tsc --build",
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "test": "jest --verbose --detectOpenHandles",
     "example": "node ./examples/simple-usage/index.js"
   },
@@ -33,12 +34,12 @@
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
     "@axa/bautajs-core": "^3.0.0-alpha.0",
-    "@axa/bautajs-tsconfig": "*",
     "@fastify/swagger": "^7.6.1",
     "fastify": "^4.8.1",
     "fastify-plugin": "^4.2.1"
   },
   "devDependencies": {
-    "@axa/bautajs-datasource-rest": "^3.0.0-alpha.0"
+    "@axa/bautajs-datasource-rest": "^3.0.0-alpha.0",
+    "@axa/bautajs-tsconfig": "*"
   }
 }
