--- a/package.json
+++ b/package.json
@@ -20,6 +20,26 @@
     "url": "https://github.com/axa-group/bauta.js/issues"
   },
   "homepage": "https://github.com/axa-group/bauta.js#readme",
+  "scripts": {
+    "lerna": "lerna",
+    "cm": "git-cz",
+    "benchmark-core": "npx concurrently -k -s first \"node ./packages/bautajs-core/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000/api/op1\"",
+    "benchmark-express": "npx concurrently -k -s first \"node ./packages/bautajs-express/benchmark/simple.js\" \"npx autocannon -c 20 -d 5 -p 10 localhost:3000/api/op1\"",
+    "benchmark-fastify": "npx concurrently -k -s first \"node ./packages/bautajs-fastify/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000/api/op1\"",
+    "lint": "eslint '*/**/*.ts'",
+    "prepare": "husky install",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "release:local": "npm run clean && npm i && npm run test && lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
+    "release": "lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
+    "release:from-package": "lerna publish from-package --exact --no-verify-access --no-verify-registry --yes",
+    "test": "turbo run test",
+    "test:clean": "jest --clearCache",
+    "test:watch": "npm run test -- --watchAll",
+    "checkDeps": "npm run lerna exec -- --concurrency 14 -- npm outdated",
+    "build": "turbo run build",
+    "build:clean": "tsc --build tsconfig.build.json --clean",
+    "watch": "tsc --build tsconfig.build.json --watch"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
     "@types/body-parser": "^1.19.2",
@@ -33,18 +53,17 @@
     "@types/split2": "^3.2.1",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "4.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "bench": "^0.3.6",
     "commitizen": "^4.2.4",
     "commitlint": "^17.0.2",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.18.0",
+    "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.5.3",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
     "fast-safe-stringify": "^2.1.1",
     "form-data": "^4.0.0",
@@ -68,26 +87,6 @@
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
     "typescript": "4.8.x"
-  },
-  "scripts": {
-    "lerna": "lerna",
-    "cm": "git-cz",
-    "benchmark-core": "npx concurrently -k -s first \"node ./packages/bautajs-core/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000/api/op1\"",
-    "benchmark-express": "npx concurrently -k -s first \"node ./packages/bautajs-express/benchmark/simple.js\" \"npx autocannon -c 20 -d 5 -p 10 localhost:3000/api/op1\"",
-    "benchmark-fastify": "npx concurrently -k -s first \"node ./packages/bautajs-fastify/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000/api/op1\"",
-    "lint": "eslint '*/**/*.{ts,tsx}' ",
-    "prepare": "husky install",
-    "clean": "turbo run clean && rm -rf node_modules",
-    "release:local": "npm run clean && npm i && npm run test && lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
-    "release": "lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
-    "release:from-package": "lerna publish from-package --exact --no-verify-access --no-verify-registry --yes",
-    "test": "turbo run test",
-    "test:clean": "jest --clearCache",
-    "test:watch": "npm run test -- --watchAll",
-    "checkDeps": "npm run lerna exec -- --concurrency 14 -- npm outdated",
-    "build": "turbo run build",
-    "build:clean": "tsc --build tsconfig.build.json --clean",
-    "watch": "tsc --build tsconfig.build.json --watch"
   },
   "engines": {
     "node": ">=14"
