--- a/package.json
+++ b/package.json
@@ -20,25 +20,24 @@
     "url": "https://github.com/axa-group/bauta.js/issues"
   },
   "homepage": "https://github.com/axa-group/bauta.js#readme",
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
     "lerna": "lerna",
     "cm": "git-cz",
     "benchmark-core": "npx concurrently -k -s first \"node ./packages/bautajs-core/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000/api/op1\"",
     "benchmark-express": "npx concurrently -k -s first \"node ./packages/bautajs-express/benchmark/simple.js\" \"npx autocannon -c 20 -d 5 -p 10 localhost:3000/api/op1\"",
     "benchmark-fastify": "npx concurrently -k -s first \"node ./packages/bautajs-fastify/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000/api/op1\"",
-    "lint": "eslint '*/**/*.ts'",
-    "prepare": "husky install",
     "clean": "turbo run clean && rm -rf node_modules",
+    "lint": "eslint '*/**/*.ts'",
+    "test": "turbo run test",
     "release:local": "npm run clean && npm i && npm run test && lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
     "release": "lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
     "release:from-package": "lerna publish from-package --exact --no-verify-access --no-verify-registry --yes",
-    "test": "turbo run test",
-    "test:clean": "jest --clearCache",
-    "test:watch": "npm run test -- --watchAll",
     "checkDeps": "npm run lerna exec -- --concurrency 14 -- npm outdated",
     "build": "turbo run build",
-    "build:clean": "tsc --build tsconfig.build.json --clean",
-    "watch": "tsc --build tsconfig.build.json --watch"
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
@@ -85,11 +84,9 @@
     "split2": "^4.1.0",
     "stream-mock": "^2.0.5",
     "supertest": "^6.2.3",
+    "turbo": "^1.7.4",
     "ts-jest": "^28.0.5",
     "typescript": "4.8.x"
-  },
-  "engines": {
-    "node": ">=14"
   },
   "config": {
     "commitizen": {
@@ -99,8 +96,5 @@
   "jestSonar": {
     "reportPath": "coverage",
     "reportFile": "test-reporter.xml"
-  },
-  "dependencies": {
-    "turbo": "^1.7.4"
   }
 }
