--- a/turbo.json
+++ b/turbo.json
@@ -7,8 +7,7 @@
 
     },
     "test": {
-      "dependsOn": ["build"],
-      "inputs": ["src/**/*.js", "src/**/*.ts", "test/**/*.js", "test/**/*.ts"]
+      "dependsOn": ["build"]
     },
     "lint": {},
     "clean": {
