--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -43,6 +43,6 @@
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {    
-    "@axa/bautajs-tsconfig": "*"
+    "@axa/bautajs-dev-config": "*"
   }
 }
