--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,18 @@ jobs:
       - run: npm run lint
       - run: npm run build --if-present
       - run: npm test
+
+  dependency-review:
+    name: DependaBot
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'pull_request' && github.actor != 'dependabot[bot]' }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: 'Dependency Review'
+        uses: actions/dependency-review-action@v3
+        with:
+          fail-on-severity: high
+          deny-licenses: LGPL-2.0, BSD-2-Clause # https://spdx.org/licenses/
+          comment-summary-in-pr: true
