ci(security): add gitleaks action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,3 +90,14 @@ jobs:
       - name: Fail on malware detected in PR
         if: ${{ env.IS_MALWARE_DETECTED == 'true' }}
         run: exit 1
+
+  gitleaks-scan:
+    name: gitleaks-scan
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_CLI_TOKEN }}
