--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,13 @@
 {
   "lerna": "3.13.0",
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "command": {
     "bootstrap": {
-      "npmClientArgs": ["--no-package-lock"]
+      "npmClientArgs": [
+        "--no-package-lock"
+      ]
     }
   },
   "version": "3.0.0-alpha.0"
