--- a/package.json
+++ b/package.json
@@ -35,58 +35,58 @@
     "release:local": "npm run clean && npm i && npm run test && lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
     "release": "lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
     "release:from-package": "lerna publish from-package --exact --no-verify-access --no-verify-registry --yes",
-    "checkDeps": "npm run lerna exec -- --concurrency 14 -- npm outdated",
+    "checkDeps": "npx npm-check-updates -u && npm run lerna exec -- npx npm-check-updates -u",
     "build": "turbo run build",
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^17.0.2",
+    "@commitlint/config-conventional": "^17.4.4",
     "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/express-pino-logger": "^4.0.3",
-    "@types/jest": "^28.1.3",
-    "@types/node": "^18.0.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
     "@types/pino": "^7.0.5",
     "@types/split2": "^3.2.1",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "4.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "bench": "^0.3.6",
-    "commitizen": "^4.2.4",
-    "commitlint": "^17.0.2",
+    "commitizen": "^4.3.0",
+    "commitlint": "^17.5.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.37.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "fast-safe-stringify": "^2.1.1",
     "form-data": "^4.0.0",
     "got": "^11.8.5",
-    "husky": "^8.0.1",
-    "jest": "^28.1.1",
-    "jest-config": "^28.1.1",
-    "jest-extended": "2.0.0",
-    "jest-junit": "13.2.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "jest-config": "^29.5.0",
+    "jest-extended": "3.2.4",
+    "jest-junit": "15.0.0",
     "jest-sonar-reporter": "^2.0.0",
-    "lerna": "^5.1.5",
-    "nock": "^13.2.7",
-    "node-mocks-http": "^1.11.0",
+    "lerna": "^6.6.1",
+    "nock": "^13.3.0",
+    "node-mocks-http": "^1.12.2",
     "node-object-hash": "^2.3.10",
-    "pino": "^8.4.2",
-    "prettier": "^2.7.1",
+    "pino": "^8.11.0",
+    "prettier": "^2.8.7",
     "prettier-check": "^2.0.0",
     "quick-lru-cjs": "^5.2.1",
-    "split2": "^4.1.0",
+    "split2": "^4.2.0",
     "stream-mock": "^2.0.5",
-    "supertest": "^6.2.3",
-    "turbo": "^1.7.4",
-    "ts-jest": "^28.0.5",
-    "typescript": "4.8.x"
+    "supertest": "^6.3.3",
+    "turbo": "^1.8.8",
+    "ts-jest": "^29.1.0",
+    "typescript": "5.0.x"
   },
   "config": {
     "commitizen": {
