--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "scripts": {
     "lerna": "lerna",
-    "cm": "git-cz",
     "benchmark-core": "npx concurrently -k -s first \"node ./packages/bautajs-core/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000/api/op1\"",
     "benchmark-express": "npx concurrently -k -s first \"node ./packages/bautajs-express/benchmark/simple.js\" \"npx autocannon -c 20 -d 5 -p 10 localhost:3000/api/op1\"",
     "benchmark-fastify": "npx concurrently -k -s first \"node ./packages/bautajs-fastify/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000/api/op1\"",
@@ -40,7 +39,8 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^17.4.4",
+    "@commitlint/cli": "^17.4.1",
+    "@commitlint/config-conventional": "^17.4.0",
     "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
@@ -54,12 +54,7 @@
     "@types/swagger-ui-express": "4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
-    "bench": "^0.3.6",
-    "commitizen": "^4.3.0",
-    "commitlint": "^17.5.1",
-    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.37.0",
-    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -70,8 +65,8 @@
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-config": "^29.5.0",
-    "jest-extended": "3.2.4",
-    "jest-junit": "15.0.0",
+    "jest-extended": "^3.2.4",
+    "jest-junit": "^15.0.0",
     "jest-sonar-reporter": "^2.0.0",
     "lerna": "^6.6.1",
     "nock": "^13.3.0",
@@ -79,19 +74,12 @@
     "node-object-hash": "^2.3.10",
     "pino": "^8.11.0",
     "prettier": "^2.8.7",
-    "prettier-check": "^2.0.0",
-    "quick-lru-cjs": "^5.2.1",
     "split2": "^4.2.0",
     "stream-mock": "^2.0.5",
     "supertest": "^6.3.3",
     "turbo": "^1.8.8",
     "ts-jest": "^29.1.0",
-    "typescript": "5.0.x"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+    "typescript": "~5.0.0"
   },
   "jestSonar": {
     "reportPath": "coverage",
