--- a/packages/bautajs-core/package.json
+++ b/packages/bautajs-core/package.json
@@ -43,7 +43,8 @@
     "hyperid": "^3.1.1",
     "openapi-types": "^12.1.0",
     "p-cancelable": "^2.1.1",
-    "pino": "^8.11.0"
+    "pino": "^8.11.0",
+    "quick-lru-cjs": "^5.2.1"
   },
   "devDependencies": {    
     "@axa/bautajs-dev-config": "*"
