test(fastify): move tests to test folder

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,14 @@
         "@typescript-eslint/ban-ts-comment": 0,
         "@typescript-eslint/no-var-requires": 0
       }
+    },
+    {
+      "files": "**/test/*.{js,ts}",
+      "rules": {
+        "@typescript-eslint/no-explicit-any": 0,
+        "@typescript-eslint/ban-ts-comment": 0,
+        "@typescript-eslint/no-var-requires": 0
+      }
     }
   ],
   "rules": {
