--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,5 @@
 dist/
+**/dist/**/*
 node_modules/
 coverage/
 target/
@@ -13,4 +14,3 @@ target/
 *.swo
 *.swp
 *.tgz
-packages/bautajs-core/benchmark/legacy/*.js
