--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
       "rules": {
         "@typescript-eslint/no-explicit-any": 0,
         "@typescript-eslint/ban-ts-comment": 0,
-        "@typescript-eslint/no-var-requires": 0
+        "@typescript-eslint/no-var-requires": 0,
+        "import/extensions": 0
       }
     },
     {
