ci: add new release workflow

--- a/package.json
+++ b/package.json
@@ -24,16 +24,13 @@
     "node": ">=16"
   },
   "scripts": {
-    "lerna": "lerna",
     "benchmark-core": "npx concurrently -k -s first \"node ./packages/bautajs-core/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000/api/op1\"",
     "benchmark-express": "npx concurrently -k -s first \"node ./packages/bautajs-express/benchmark/simple.js\" \"npx autocannon -c 20 -d 5 -p 10 localhost:3000/api/op1\"",
     "benchmark-fastify": "npx concurrently -k -s first \"node ./packages/bautajs-fastify/benchmark/simple.js\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000/api/op1\"",
     "clean": "turbo run clean && rm -rf node_modules",
     "lint": "eslint \"*/**/*.{ts,js}\"",
     "test": "turbo run test",
-    "release:local": "npm run clean && npm i && npm run test && lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
-    "release": "lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
-    "release:from-package": "lerna publish from-package --exact --no-verify-access --no-verify-registry --yes",
+    "release": "lerna publish --no-changelog --yes",
     "checkDeps": "npx npm-check-updates -u && npm run lerna exec -- npx npm-check-updates -u",
     "build": "turbo run build",
     "prepare": "husky install"
@@ -78,7 +75,7 @@
     "stream-mock": "^2.0.5",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "turbo": "^1.8.8",
+    "turbo": "^1.9.3",
     "typescript": "~5.0.0"
   },
   "jestSonar": {
