--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,10 @@
     "bootstrap": {
       "npmClientArgs": [
         "--no-package-lock"
-      ]
+      ],
+      "version": {
+        "message": "chore(release): %s"
+      }
     }
   },
   "useWorkspaces": true,
