ci: add package manager

--- a/package.json
+++ b/package.json
@@ -81,5 +81,6 @@
   "jestSonar": {
     "reportPath": "coverage",
     "reportFile": "test-reporter.xml"
-  }
+  },
+  "packageManager": "npm@9.5.0"
 }
