fix(ci): run release creation only if publish is success

--- a/.github/workflows/release-new.yml
+++ b/.github/workflows/release-new.yml
@@ -54,6 +54,9 @@ jobs:
 
   release:
     needs: publish
+    if: |
+      always() && 
+      needs.publish.result == 'success'
     runs-on: 'ubuntu-latest'
     steps:
       - uses: actions/checkout@v3
