--- a/.github/workflows/release-new.yml
+++ b/.github/workflows/release-new.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.branch }}
+          fetch-depth: 0
       - uses: actions/setup-node@v2
         with:
           node-version: 18
