--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,11 +21,6 @@ on:
         required: true
         default: 'main'
         type: string
-      prerelease:
-        description: 'Is this release a prerelease?'
-        required: true
-        type: boolean
-        default: false
 
 jobs:
   publish:
@@ -34,6 +29,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.branch }}
+          fetch-depth: 0
       - uses: actions/setup-node@v2
         with:
           node-version: 18
