--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-fastify",
-  "version": "3.0.0-alpha.2",
+  "version": "3.0.0",
   "description": "A bautaJS fastify plugin. Allows auto exposing the bautaJS operations.",
   "main": "dist",
   "types": "dist",
@@ -33,13 +33,13 @@
   },
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@axa/bautajs-core": "^3.0.0-alpha.2",
+    "@axa/bautajs-core": "^3.0.0",
     "@fastify/swagger": "^7.6.1",
     "fastify": "^4.15.0",
     "fastify-plugin": "^4.5.0"
   },
   "devDependencies": {
-    "@axa/bautajs-datasource-rest": "^3.0.0-alpha.2",
+    "@axa/bautajs-datasource-rest": "^3.0.0",
     "@axa/bautajs-dev-config": "*"
   }
 }
