--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-datasource-rest",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "A bautaJS datasource rest provider",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -32,8 +32,8 @@
     "npm": ">=8"
   },
   "dependencies": {
-    "@axa/bautajs-core": "^3.0.0",
-    "@axa/bautajs-dev-config": "*",
+    "@axa/bautajs-core": "^3.0.1",
+    "@axa/bautajs-dev-config": "^3.0.1",
     "@axa/native-proxy-agent": "^1.0.0",
     "@sindresorhus/is": "^4.6.0",
     "got": "^11.8.5"
