--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-express",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "A bautaJS Express.js plugin. Allow auto exposing the bautaJS operations.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -32,7 +32,7 @@
     "npm": ">=8"
   },
   "dependencies": {
-    "@axa/bautajs-core": "^3.0.0",
+    "@axa/bautajs-core": "^3.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -43,6 +43,6 @@
     "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
-    "@axa/bautajs-dev-config": "*"
+    "@axa/bautajs-dev-config": "^3.0.1"
   }
 }
