--- a/.eslintrc
+++ b/.eslintrc
@@ -65,7 +65,7 @@
       }
     ],
     "no-promise-executor-return": 0,
-    "class-methods-use-this": "warn",
+   "class-methods-use-this": ["error", { "enforceForClassFields": false }],
     "import/extensions": [
       "error",
       "always",
